stage 6 start